fix: align radio center

--- a/src/components/twoFactorAuth/twoFactorAuth.styles.scss
+++ b/src/components/twoFactorAuth/twoFactorAuth.styles.scss
@@ -178,7 +178,7 @@ $two-factor-auth-overlay-buttons-margin-right: auto !default;
 			}
 		}
 
-		.radioButton__contentWrapper {
+		.radioButton--default .radioButton__contentWrapper {
 			align-items: center;
 		}
 
